# artekmed_python_client

./: README.md  debug_helper.py  interactive_testing.ipynb  pyproject.toml
tcnart/: __init__.py
tcnart/core/: __init__.py  dataflow.py  datamodel.py  frames.py  pixel_image.py
tcnart/core/semantic_type/: __init__.py  generic.py  geometry.py  image.py  model.py  transform.py
tcnart/network/: __init__.py  discovery.py  receiver.py
tcnart/schema/: model.py
tcnart/schema/messages/: camera.py  common.py  geometry.py  monitor.py  rpc.py  service_controller.py  stream.py  video.py
tcnart/schema/types/: common.py  format.py  math.py  primitives.py  transform.py
tcnart/serialization/: cdr_serialization.py  error.py
